--- a/style.css
+++ b/style.css
@@ -1,39 +1,94 @@
-*{
-    box-sizing: border-box;
-    padding:0;
-    margin:0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.container{
-    width:80%;
-    display:block;
-    text-align: center;
-    margin:0 auto;
-}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: sans-serif; }
 
-.title{
+body {
+  background: #233142;
+  width: 100%;
+  height: 100vh; }
+
+.container {
+  display: block;
+  width: 700px;
+  height: 500px;
+  margin: 0 auto;
+  text-align: center; }
+  .container .message {
+    color: #fff;
     font-size: 36px;
-}
+    margin: 50px 0px; }
+  .container h1 {
+    width: 100%;
+    background: #fff;
+    text-align: center;
+    height: 50px;
+    margin-top: 50px;
+    color: #042C2E;
+    cursor: default;
+    padding: 5px 0; }
+  .container #score {
+    display: flex;
+    margin: 40px auto 0 auto;
+    padding: 0px 0 0px 0;
+    list-style-type: none;
+    width: 60%;
+    background: transparent;
+    height: auto;
+    justify-content: space-around;
+    align-items: center; }
+    .container #score li i {
+      border-radius: 50%;
+      text-align: center;
+      padding: 25px 0;
+      font-size: 36px;
+      background: rgba(0, 0, 0, 0.1);
+      width: 100px;
+      height: 100px;
+      transition-duration: .2s; }
+    .container #score li i:first-child {
+      border: 4px solid #00BD56;
+      box-shadow: 0px 0px 6px #00BD56;
+      color: #00BD56; }
+      .container #score li i:first-child:hover {
+        box-shadow: 0px 0px 16px #00BD56;
+        text-shadow: 0px 0px 2px #00BD56; }
+    .container #score li i:last-child {
+      border: 4px solid #ff0000;
+      box-shadow: 0px 0px 6px #ff0000;
+      color: #ff0000; }
+      .container #score li i:last-child:hover {
+        box-shadow: 0px 0px 26px #ff0000;
+        text-shadow: 0px 0px 2px #ff0000; }
+    .container #score li span {
+      margin: 0 10px;
+      font-size: 24px;
+      color: #fff;
+      cursor: default; }
+  .container #r-p-s {
+    display: flex;
+    margin: 40px auto 0 auto;
+    padding: 0px 0 40px 0;
+    list-style-type: none;
+    width: 60%;
+    background: transparent;
+    height: auto;
+    justify-content: space-around;
+    align-items: center; }
+    .container #r-p-s i {
+      border-radius: 50%;
+      color: #ffcd94;
+      text-align: center;
+      padding: 30px 0;
+      font-size: 36px;
+      background: rgba(0, 0, 0, 0.1);
+      width: 100px;
+      height: 100px;
+      transition-duration: .2s;
+      cursor: pointer; }
+      .container #r-p-s i:hover {
+        box-shadow: 0px 0px 26px rgba(255, 255, 255, 0.3);
+        text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.3); }
 
-.r-p-s{
-  
-margin-top:50px !important;
-   
-
-}
-
-li{
-    display:inline-block;
-    margin-right:100px;
-    cursor:pointer;
-}
-
-li:last-child{
-    margin-right: 0px;
-}
-li i{
-    color:#ffcd94;
-    text-shadow: 0px 0px 3px #444;
-    font-size: 60px;
-}
-
+/*# sourceMappingURL=style.css.map */
