--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 $human: #00BD56;
 $robot:#ff0000;
 
+
 *{
     padding:0;
     margin:0;
@@ -8,8 +9,7 @@ $robot:#ff0000;
     font-family: sans-serif;
 }
 body{
-   // background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(33,115,130,1) 1.4%, rgba(35,39,124,1) 90% );
-   background:#233142;
+    background:#233142;
     width:100%;
     height:100vh;
 }
@@ -19,37 +19,49 @@ body{
     width:700px;
     height:500px;
     margin:0 auto;
-    //align-content: center;
-    //background:pink;
     text-align: center;
+
+    .wrapper{
+        width:60%;
+        height:auto;
+        display:block;
+        margin:0 auto;
+        margin-top:50px;
+        box-shadow:0px 0px 20px rgba(255,255,255,0.2);
+        border-radius:2px;
+    
     .message{
         color:#fff;
-        font-size: 36px;
+        font-size: 26px;
+        font-weight: 100;
         margin:50px 0px;
     }
     h1{
         width:100%;
+        display:block;
+        margin:0 auto;
         background:#fff;
         text-align: center;
         height:50px;
-        margin-top:50px;
         color:#042C2E;
         cursor:default;
         padding:5px 0;
+        border-top-left-radius: 2px;
+        border-top-right-radius: 2px;
+
+
     }
     #score{
         display:flex;
         margin:40px auto 0 auto;
-        //padding:0px 0 40px 0;
         padding:0px 0 0px 0;
-
         list-style-type:none;
-        width:60%;
+        width:100%;
         background:transparent;
-       // border-bottom:5px solid #455d7a;
         height:auto;
         justify-content: space-around;
         align-items: center;
+        //border-bottom:1px solid rgba(255,255,255,0.1);
         
         
        li{
@@ -61,8 +73,7 @@ body{
                background:rgba(0,0,0,0.1);
                width:100px;
                height:100px;
-               transition-duration:.2s;
-
+               transition-duration: .2s;
            }
 
            & i:first-child{
@@ -83,12 +94,9 @@ body{
             box-shadow:0px 0px 6px $robot;
             color:$robot;
 
-
-
             &:hover{
                 box-shadow:0px 0px 26px $robot;
                 text-shadow:0px 0px 2px $robot;
-                
                     }
         }
            span{
@@ -98,9 +106,6 @@ body{
                cursor:default;
            }
        }
-
-       
-        
     }
 
     #r-p-s{
@@ -108,7 +113,7 @@ body{
         margin:40px auto 0 auto;
         padding:0px 0 40px 0;
         list-style-type:none;
-        width:60%;
+        width:100%;
         background:transparent;
         height:auto;
         justify-content: space-around;
@@ -123,7 +128,7 @@ body{
                background:rgba(0,0,0,0.1);
                width:100px;
                height:100px;
-               transition-duration:.2s;
+               transition-duration: .2s;
                cursor:pointer;
 
                &:hover{
@@ -134,6 +139,7 @@ body{
 
     }
 
+}
 }
 
 
