--- a/style.scss
+++ b/style.scss
@@ -61,7 +61,6 @@ body{
         height:auto;
         justify-content: space-around;
         align-items: center;
-        //border-bottom:1px solid rgba(255,255,255,0.1);
         
         
        li{
@@ -100,8 +99,16 @@ body{
                     }
         }
            span{
+               display:inline-block;
                margin:0 10px;
+               //border:1px solid #fff;
+               background:rgba(0,0,0,0.1);
+               box-shadow:0px 0px 10px rgba(255,255,255,0.2);
+               border-radius:2px;
                font-size: 24px;
+               padding:10% 0px;
+               width:40px;
+               height:60px;
                color:#fff;
                cursor:default;
            }
