--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     display: block;
     margin: 0 auto;
     margin-top: 50px;
-    box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.4);
     border-radius: 2px; }
     .container .wrapper .message {
       color: #fff;
@@ -43,13 +43,16 @@ body {
     .container .wrapper #score {
       display: flex;
       margin: 40px auto 0 auto;
-      padding: 0px 0 0px 0;
       list-style-type: none;
       width: 100%;
       background: transparent;
       height: auto;
       justify-content: space-around;
-      align-items: center; }
+      align-items: center;
+      border-top: 1px solid rgba(0, 0, 0, 0.2);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+      background: rgba(0, 0, 0, 0.1);
+      padding: 20px 40px; }
       .container .wrapper #score li i {
         border-radius: 50%;
         text-align: center;
@@ -76,8 +79,8 @@ body {
       .container .wrapper #score li span {
         display: inline-block;
         margin: 0 10px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
         background: rgba(0, 0, 0, 0.1);
-        box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
         border-radius: 2px;
         font-size: 24px;
         padding: 10% 0px;
@@ -107,7 +110,25 @@ body {
         transition-duration: .2s;
         cursor: pointer; }
         .container .wrapper #r-p-s i:hover {
-          box-shadow: 0px 0px 26px rgba(255, 255, 255, 0.3);
-          text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.3); }
+          /* box-shadow:0px 0px 26px rgba(255,255,255,0.3);
+           text-shadow:0px 0px 1px rgba(255,255,255,0.3);*/
+          animation: glow 2s ease-in infinite; }
+
+@keyframes glow {
+  0% {
+    box-shadow: 0px 0px 0px rgba(255, 255, 255, 0);
+    text-shadow: 0px 0px 1px rgba(255, 255, 255, 0); }
+  25% {
+    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
+    text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.6); }
+  50% {
+    box-shadow: 0px 0px 0px rgba(255, 255, 255, 0);
+    text-shadow: 0px 0px 1px rgba(255, 255, 255, 0); }
+  75% {
+    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
+    text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.6); }
+  100% {
+    box-shadow: 0px 0px 0px rgba(255, 255, 255, 0);
+    text-shadow: 0px 0px 1px rgba(255, 255, 255, 0); } }
 
 /*# sourceMappingURL=style.css.map */
