--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,7 @@ body{
         display:block;
         margin:0 auto;
         margin-top:50px;
-        box-shadow:0px 0px 20px rgba(255,255,255,0.2);
+        box-shadow:0px 0px 2px rgba(255,255,255,0.4);
         border-radius:2px;
     
     .message{
@@ -54,13 +54,18 @@ body{
     #score{
         display:flex;
         margin:40px auto 0 auto;
-        padding:0px 0 0px 0;
+        //padding:0px 0 0px 0;
         list-style-type:none;
         width:100%;
         background:transparent;
         height:auto;
         justify-content: space-around;
         align-items: center;
+        border-top:1px solid rgba(0,0,0,0.2);
+        border-bottom:1px solid rgba(0,0,0,0.2);
+        background:rgba(0,0,0,0.1);
+        padding:20px 40px;
+
         
         
        li{
@@ -101,9 +106,9 @@ body{
            span{
                display:inline-block;
                margin:0 10px;
-               //border:1px solid #fff;
+               border:1px solid rgba(255,255,255,0.1);
                background:rgba(0,0,0,0.1);
-               box-shadow:0px 0px 10px rgba(255,255,255,0.2);
+               //box-shadow:0px 0px 10px rgba(255,255,255,0.2);
                border-radius:2px;
                font-size: 24px;
                padding:10% 0px;
@@ -139,14 +144,40 @@ body{
                cursor:pointer;
 
                &:hover{
-                box-shadow:0px 0px 26px rgba(255,255,255,0.3);
-                text-shadow:0px 0px 1px rgba(255,255,255,0.3);
+               /* box-shadow:0px 0px 26px rgba(255,255,255,0.3);
+                text-shadow:0px 0px 1px rgba(255,255,255,0.3);*/
+                animation: glow 2s ease-in infinite;
                }
         }
 
     }
 
 }
+}
+
+@keyframes glow{
+    0%{
+        box-shadow:0px 0px 0px rgba(255,255,255,0);
+        text-shadow:0px 0px 1px rgba(255,255,255,0);
+    }
+    25%{
+        box-shadow:0px 0px 5px rgba(255,255,255,0.6);
+        text-shadow:0px 0px 6px rgba(255,255,255,0.6);
+    }
+    50%{
+        box-shadow:0px 0px 0px rgba(255,255,255,0);
+        text-shadow:0px 0px 1px rgba(255,255,255,0);
+    }
+    75%{
+        box-shadow:0px 0px 5px rgba(255,255,255,0.6);
+        text-shadow:0px 0px 6px rgba(255,255,255,0.6);
+
+    }
+    100%{
+        box-shadow:0px 0px 0px rgba(255,255,255,0);
+        text-shadow:0px 0px 1px rgba(255,255,255,0);
+
+    }
 }
 
 
