--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 
 .container {
   display: block;
+  max-width: 100%;
   width: 700px;
   height: 500px;
   margin: 0 auto;
@@ -21,7 +22,7 @@ body {
     display: block;
     margin: 0 auto;
     margin-top: 50px;
-    box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.4);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4), 2px 4px 0px rgba(0, 0, 0, 0.4);
     border-radius: 2px; }
     .container .wrapper .message {
       color: #fff;
@@ -50,7 +51,7 @@ body {
       justify-content: space-around;
       align-items: center;
       border-top: 1px solid rgba(0, 0, 0, 0.2);
-      border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+      box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
       background: rgba(0, 0, 0, 0.1);
       padding: 40px 40px; }
       .container .wrapper #score li i {
@@ -107,28 +108,26 @@ body {
         background: rgba(0, 0, 0, 0.1);
         width: 100px;
         height: 100px;
-        transition-duration: .2s;
-        cursor: pointer; }
+        position: relative;
+        cursor: pointer;
+        box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.4); }
         .container .wrapper #r-p-s i:hover {
-          /* box-shadow:0px 0px 26px rgba(255,255,255,0.3);
-           text-shadow:0px 0px 1px rgba(255,255,255,0.3);*/
           animation: glow 2s ease-in infinite; }
+        .container .wrapper #r-p-s i:active {
+          box-shadow: 0px 0px 0px rgba(255, 255, 255, 0.3);
+          top: 2px;
+          left: 4px; }
 
 @keyframes glow {
   0% {
-    box-shadow: 0px 0px 0px rgba(255, 255, 255, 0);
     text-shadow: 0px 0px 1px rgba(255, 255, 255, 0); }
   25% {
-    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
     text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.6); }
   50% {
-    box-shadow: 0px 0px 0px rgba(255, 255, 255, 0);
     text-shadow: 0px 0px 1px rgba(255, 255, 255, 0); }
   75% {
-    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.6);
     text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.6); }
   100% {
-    box-shadow: 0px 0px 0px rgba(255, 255, 255, 0);
     text-shadow: 0px 0px 1px rgba(255, 255, 255, 0); } }
 
 /*# sourceMappingURL=style.css.map */
