--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,8 @@ body{
 
 .container{
     display:block;
+    //width:700px;
+    max-width:100%;
     width:700px;
     height:500px;
     margin:0 auto;
@@ -27,7 +29,7 @@ body{
         display:block;
         margin:0 auto;
         margin-top:50px;
-        box-shadow:0px 0px 2px rgba(255,255,255,0.4);
+        box-shadow:0px 0px 2px rgba(0,0,0,0.4),2px 4px 0px rgba(0,0,0,0.4);
         border-radius:2px;
     
     .message{
@@ -53,10 +55,7 @@ body{
     }
     #score{
         display:flex;
-        //margin:40px auto 0 auto;
         margin:0px auto 0 auto;
-
-        //padding:0px 0 0px 0;
         list-style-type:none;
         width:100%;
         background:transparent;
@@ -64,7 +63,7 @@ body{
         justify-content: space-around;
         align-items: center;
         border-top:1px solid rgba(0,0,0,0.2);
-        border-bottom:1px solid rgba(0,0,0,0.2);
+        box-shadow: 0px 1px 0px rgba(0,0,0,0.4);
         background:rgba(0,0,0,0.1);
         padding:40px 40px;
 
@@ -110,7 +109,6 @@ body{
                margin:0 10px;
                border:1px solid rgba(255,255,255,0.1);
                background:rgba(0,0,0,0.1);
-               //box-shadow:0px 0px 10px rgba(255,255,255,0.2);
                border-radius:2px;
                font-size: 24px;
                padding:10% 0px;
@@ -142,13 +140,21 @@ body{
                background:rgba(0,0,0,0.1);
                width:100px;
                height:100px;
-               transition-duration: .2s;
+               //transition-duration: .2s;
+               position: relative;
                cursor:pointer;
+               box-shadow:2px 4px 0px rgba(0,0,0,0.4);
 
-               &:hover{
-               /* box-shadow:0px 0px 26px rgba(255,255,255,0.3);
-                text-shadow:0px 0px 1px rgba(255,255,255,0.3);*/
+              &:hover{
                 animation: glow 2s ease-in infinite;
+               }
+
+               &:active{
+
+                box-shadow:0px 0px 0px rgba(255,255,255,0.3);
+                top:2px;
+                left:4px;
+               // transition-duration: .2s;
                }
         }
 
@@ -159,24 +165,24 @@ body{
 
 @keyframes glow{
     0%{
-        box-shadow:0px 0px 0px rgba(255,255,255,0);
+        //box-shadow:0px 0px 0px rgba(255,255,255,0);
         text-shadow:0px 0px 1px rgba(255,255,255,0);
     }
     25%{
-        box-shadow:0px 0px 5px rgba(255,255,255,0.6);
+       // box-shadow:0px 0px 5px rgba(255,255,255,0.6);
         text-shadow:0px 0px 6px rgba(255,255,255,0.6);
     }
     50%{
-        box-shadow:0px 0px 0px rgba(255,255,255,0);
+       // box-shadow:0px 0px 0px rgba(255,255,255,0);
         text-shadow:0px 0px 1px rgba(255,255,255,0);
     }
     75%{
-        box-shadow:0px 0px 5px rgba(255,255,255,0.6);
+        //box-shadow:0px 0px 5px rgba(255,255,255,0.6);
         text-shadow:0px 0px 6px rgba(255,255,255,0.6);
 
     }
     100%{
-        box-shadow:0px 0px 0px rgba(255,255,255,0);
+       // box-shadow:0px 0px 0px rgba(255,255,255,0);
         text-shadow:0px 0px 1px rgba(255,255,255,0);
 
     }
