--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ body {
       justify-content: space-around;
       align-items: center;
       border-top: 1px solid rgba(0, 0, 0, 0.2);
-      box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
       background: rgba(0, 0, 0, 0.1);
       padding: 40px 40px; }
       .container .wrapper #score li i {
@@ -80,7 +79,7 @@ body {
       .container .wrapper #score li span {
         display: inline-block;
         margin: 0 10px;
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.4);
         background: rgba(0, 0, 0, 0.1);
         border-radius: 2px;
         font-size: 24px;
@@ -120,14 +119,30 @@ body {
 
 @keyframes glow {
   0% {
-    text-shadow: 0px 0px 1px rgba(255, 255, 255, 0); }
+    text-shadow: 0px 0px 1px #ffcd94; }
   25% {
-    text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.6); }
+    text-shadow: 0px 0px 6px #ffcd94; }
   50% {
-    text-shadow: 0px 0px 1px rgba(255, 255, 255, 0); }
+    text-shadow: 0px 0px 1px #ffcd94; }
   75% {
-    text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.6); }
+    text-shadow: 0px 0px 6px #ffcd94; }
   100% {
-    text-shadow: 0px 0px 1px rgba(255, 255, 255, 0); } }
+    text-shadow: 0px 0px 1px #ffcd94; } }
+@media only screen and (max-width: 375px) {
+  #score {
+    width: 100%;
+    padding: 40px 0px !important;
+    margin: 0 auto;
+    justify-content: none; } }
+@media only screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+    max-width: 100%;
+    height: 100vh; }
+    .container .wrapper {
+      margin-top: 10%;
+      width: 100%;
+      max-width: 100%;
+      height: 100vh; } }
 
 /*# sourceMappingURL=style.css.map */
