--- a/style.scss
+++ b/style.scss
@@ -63,7 +63,7 @@ body{
         justify-content: space-around;
         align-items: center;
         border-top:1px solid rgba(0,0,0,0.2);
-        box-shadow: 0px 1px 0px rgba(0,0,0,0.4);
+        //box-shadow: 0px 1px 0px rgba(0,0,0,0.4);
         background:rgba(0,0,0,0.1);
         padding:40px 40px;
 
@@ -104,10 +104,12 @@ body{
                 text-shadow:0px 0px 2px $robot;
                     }
         }
+
            span{
                display:inline-block;
                margin:0 10px;
-               border:1px solid rgba(255,255,255,0.1);
+               //border:1px solid rgba(255,255,255,0.1);
+               box-shadow:2px 2px 0px rgba(0,0,0,0.4);
                background:rgba(0,0,0,0.1);
                border-radius:2px;
                font-size: 24px;
@@ -140,7 +142,6 @@ body{
                background:rgba(0,0,0,0.1);
                width:100px;
                height:100px;
-               //transition-duration: .2s;
                position: relative;
                cursor:pointer;
                box-shadow:2px 4px 0px rgba(0,0,0,0.4);
@@ -154,7 +155,6 @@ body{
                 box-shadow:0px 0px 0px rgba(255,255,255,0.3);
                 top:2px;
                 left:4px;
-               // transition-duration: .2s;
                }
         }
 
@@ -166,25 +166,52 @@ body{
 @keyframes glow{
     0%{
         //box-shadow:0px 0px 0px rgba(255,255,255,0);
-        text-shadow:0px 0px 1px rgba(255,255,255,0);
+        text-shadow:0px 0px 1px #ffcd94;
     }
     25%{
        // box-shadow:0px 0px 5px rgba(255,255,255,0.6);
-        text-shadow:0px 0px 6px rgba(255,255,255,0.6);
+        text-shadow:0px 0px 6px #ffcd94;
     }
     50%{
        // box-shadow:0px 0px 0px rgba(255,255,255,0);
-        text-shadow:0px 0px 1px rgba(255,255,255,0);
+        text-shadow:0px 0px 1px #ffcd94;
     }
     75%{
         //box-shadow:0px 0px 5px rgba(255,255,255,0.6);
-        text-shadow:0px 0px 6px rgba(255,255,255,0.6);
+        text-shadow:0px 0px 6px #ffcd94;
 
     }
     100%{
        // box-shadow:0px 0px 0px rgba(255,255,255,0);
-        text-shadow:0px 0px 1px rgba(255,255,255,0);
+        text-shadow:0px 0px 1px #ffcd94;
 
+    }
+}
+
+@media only screen and (max-width: 375px){
+    #score{
+        width:100%;
+        padding:40px 0px !important;
+        margin:0 auto;
+        justify-content: none;
+      
+    }
+
+}
+
+@media only screen and (max-width: 768px){
+   
+    .container{
+        width:100% ;
+        max-width:100%;
+        height:100vh;
+       
+        .wrapper{
+            margin-top:10%;
+            width:100% ;
+            max-width:100%;
+            height:100vh;
+        }
     }
 }
 
