--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@ body {
     width: 60%;
     height: auto;
     display: block;
-    margin: 0 auto;
-    margin-top: 50px;
+    margin: 50px auto 0 auto;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4), 2px 4px 0px rgba(0, 0, 0, 0.4);
     border-radius: 2px; }
     .container .wrapper .message {
@@ -109,7 +108,8 @@ body {
         height: 100px;
         position: relative;
         cursor: pointer;
-        box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.4); }
+        box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.4);
+        -webkit-tap-highlight-color: transparent; }
         .container .wrapper #r-p-s i:hover {
           animation: glow 2s ease-in infinite; }
         .container .wrapper #r-p-s i:active {
@@ -133,7 +133,10 @@ body {
     width: 100%;
     padding: 40px 0px !important;
     margin: 0 auto;
-    justify-content: none; } }
+    justify-content: none; }
+
+  .wrapper {
+    margin-top: 0px !important; } }
 @media only screen and (max-width: 768px) {
   .container {
     width: 100%;
