--- a/style.scss
+++ b/style.scss
@@ -27,8 +27,7 @@ body{
         width:60%;
         height:auto;
         display:block;
-        margin:0 auto;
-        margin-top:50px;
+        margin:50px auto 0 auto;
         box-shadow:0px 0px 2px rgba(0,0,0,0.4),2px 4px 0px rgba(0,0,0,0.4);
         border-radius:2px;
     
@@ -145,7 +144,7 @@ body{
                position: relative;
                cursor:pointer;
                box-shadow:2px 4px 0px rgba(0,0,0,0.4);
-
+               -webkit-tap-highlight-color: transparent;
               &:hover{
                 animation: glow 2s ease-in infinite;
                }
@@ -195,6 +194,10 @@ body{
         margin:0 auto;
         justify-content: none;
       
+    }
+
+    .wrapper{
+        margin-top:0px !important;
     }
 
 }
