--- a/style.scss
+++ b/style.scss
@@ -19,13 +19,13 @@ body{
     //width:700px;
     max-width:100%;
     width:700px;
-    height:500px;
+    height:650px;
     margin:0 auto;
     text-align: center;
 
     .wrapper{
         width:60%;
-        height:auto;
+        height:100%;
         display:block;
         margin:50px auto 0 auto;
         box-shadow:0px 0px 2px rgba(0,0,0,0.4),2px 4px 0px rgba(0,0,0,0.4);
@@ -157,6 +157,29 @@ body{
                }
         }
 
+    }
+
+    .btn-reset{
+        margin-top:10px;
+        position: relative;
+        font-weight: 100;
+        font-size: 22px;
+        width:150px;
+        height:50px;
+        color:#fff;
+        background:rgba(0,0,0,0.1);
+        border:none;
+        cursor:pointer;
+        padding:5px;
+        box-shadow:2px 4px 0px rgba(0,0,0,0.4);
+        border-radius: 13px;
+        -webkit-tap-highlight-color: transparent;
+        outline:none;
+        &:active{
+            box-shadow:0px 0px 0px rgba(255,255,255,0.3);
+            top:2px;
+            left:4px;
+        }
     }
 
 }
