--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ body {
       margin-top: 10%;
       width: 100%;
       max-width: 100%;
-      height: 100vh; } }
+      height: 100vh;
+      box-shadow: none; } }
 
 /*# sourceMappingURL=style.css.map */
