--- a/style.scss
+++ b/style.scss
@@ -237,6 +237,8 @@ body{
             width:100% ;
             max-width:100%;
             height:100vh;
+         box-shadow:none;
+
         }
     }
 }
