--- a/style.css
+++ b/style.css
@@ -9,6 +9,25 @@ body {
   width: 100%;
   height: 100vh; }
 
+.won {
+  animation: glow-winner 0.5s infinite; }
+
+@keyframes glow-winner {
+  0% {
+    box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+    text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); }
+  25% {
+    box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
+    text-shadow: 0px 0px 5px rgba(212, 255, 255, 0.3); }
+  50% {
+    box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+    text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); }
+  75% {
+    box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
+    text-shadow: 0px 0px 5px rgba(212, 255, 255, 0.3); }
+  100% {
+    box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+    text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); } }
 .container {
   display: block;
   max-width: 100%;
