--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+/*Autoprefixed */
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: sans-serif; }
 
 body {
@@ -10,23 +12,51 @@ body {
   height: 100vh; }
 
 .won {
-  animation: glow-winner 0.5s infinite; }
+  -webkit-animation: glow-winner 0.5s infinite;
+          animation: glow-winner 0.5s infinite; }
+
+@-webkit-keyframes glow-winner {
+  0% {
+    -webkit-box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+            box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+    text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); }
+  25% {
+    -webkit-box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
+            box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
+    text-shadow: 0px 0px 5px rgba(212, 255, 255, 0.3); }
+  50% {
+    -webkit-box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+            box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+    text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); }
+  75% {
+    -webkit-box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
+            box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
+    text-shadow: 0px 0px 5px rgba(212, 255, 255, 0.3); }
+  100% {
+    -webkit-box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+            box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+    text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); } }
 
 @keyframes glow-winner {
   0% {
-    box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+    -webkit-box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+            box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
     text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); }
   25% {
-    box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
+    -webkit-box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
+            box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
     text-shadow: 0px 0px 5px rgba(212, 255, 255, 0.3); }
   50% {
-    box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+    -webkit-box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+            box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
     text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); }
   75% {
-    box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
+    -webkit-box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
+            box-shadow: 0px 0px 25px rgba(212, 255, 255, 0.3);
     text-shadow: 0px 0px 5px rgba(212, 255, 255, 0.3); }
   100% {
-    box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+    -webkit-box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
+            box-shadow: 0px 0px 0px rgba(212, 255, 255, 0.3);
     text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); } }
 .container {
   display: block;
@@ -40,7 +70,8 @@ body {
     height: 100%;
     display: block;
     margin: 50px auto 0 auto;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4), 2px 4px 0px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4), 2px 4px 0px rgba(0, 0, 0, 0.4);
+            box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4), 2px 4px 0px rgba(0, 0, 0, 0.4);
     border-radius: 2px; }
     .container .wrapper .message {
       color: #fff;
@@ -60,14 +91,19 @@ body {
       border-top-left-radius: 2px;
       border-top-right-radius: 2px; }
     .container .wrapper #score {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
       margin: 0px auto 0 auto;
       list-style-type: none;
       width: 100%;
       background: transparent;
       height: auto;
-      justify-content: space-around;
-      align-items: center;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
       border-top: 1px solid rgba(0, 0, 0, 0.2);
       background: rgba(0, 0, 0, 0.1);
       padding: 40px 40px; }
@@ -79,25 +115,32 @@ body {
         background: rgba(0, 0, 0, 0.1);
         width: 100px;
         height: 100px;
-        transition-duration: .2s; }
+        -webkit-transition-duration: .2s;
+             -o-transition-duration: .2s;
+                transition-duration: .2s; }
       .container .wrapper #score li i:first-child {
         border: 4px solid #00BD56;
-        box-shadow: 0px 0px 6px #00BD56;
+        -webkit-box-shadow: 0px 0px 6px #00BD56;
+                box-shadow: 0px 0px 6px #00BD56;
         color: #00BD56; }
         .container .wrapper #score li i:first-child:hover {
-          box-shadow: 0px 0px 16px #00BD56;
+          -webkit-box-shadow: 0px 0px 16px #00BD56;
+                  box-shadow: 0px 0px 16px #00BD56;
           text-shadow: 0px 0px 2px #00BD56; }
       .container .wrapper #score li i:last-child {
         border: 4px solid #ff0000;
-        box-shadow: 0px 0px 6px #ff0000;
+        -webkit-box-shadow: 0px 0px 6px #ff0000;
+                box-shadow: 0px 0px 6px #ff0000;
         color: #ff0000; }
         .container .wrapper #score li i:last-child:hover {
-          box-shadow: 0px 0px 26px #ff0000;
+          -webkit-box-shadow: 0px 0px 26px #ff0000;
+                  box-shadow: 0px 0px 26px #ff0000;
           text-shadow: 0px 0px 2px #ff0000; }
       .container .wrapper #score li span {
         display: inline-block;
         margin: 0 10px;
-        box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.4);
+        -webkit-box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.4);
+                box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.4);
         background: rgba(0, 0, 0, 0.1);
         border-radius: 2px;
         font-size: 24px;
@@ -107,6 +150,8 @@ body {
         color: #fff;
         cursor: default; }
     .container .wrapper #r-p-s {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
       margin: 40px auto 0 auto;
       padding: 0px 0 40px 0;
@@ -114,8 +159,11 @@ body {
       width: 100%;
       background: transparent;
       height: auto;
-      justify-content: space-around;
-      align-items: center; }
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
       .container .wrapper #r-p-s i {
         border-radius: 50%;
         color: #ffcd94;
@@ -127,12 +175,15 @@ body {
         height: 100px;
         position: relative;
         cursor: pointer;
-        box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.4);
+        -webkit-box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.4);
+                box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.4);
         -webkit-tap-highlight-color: transparent; }
         .container .wrapper #r-p-s i:hover {
-          animation: glow 2s ease-in infinite; }
+          -webkit-animation: glow 2s ease-in infinite;
+                  animation: glow 2s ease-in infinite; }
         .container .wrapper #r-p-s i:active {
-          box-shadow: 0px 0px 0px rgba(255, 255, 255, 0.3);
+          -webkit-box-shadow: 0px 0px 0px rgba(255, 255, 255, 0.3);
+                  box-shadow: 0px 0px 0px rgba(255, 255, 255, 0.3);
           top: 2px;
           left: 4px; }
     .container .wrapper .btn-reset {
@@ -147,14 +198,28 @@ body {
       border: none;
       cursor: pointer;
       padding: 5px;
-      box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.4);
+      -webkit-box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.4);
+              box-shadow: 2px 4px 0px rgba(0, 0, 0, 0.4);
       border-radius: 13px;
       -webkit-tap-highlight-color: transparent;
       outline: none; }
       .container .wrapper .btn-reset:active {
-        box-shadow: 0px 0px 0px rgba(255, 255, 255, 0.3);
+        -webkit-box-shadow: 0px 0px 0px rgba(255, 255, 255, 0.3);
+                box-shadow: 0px 0px 0px rgba(255, 255, 255, 0.3);
         top: 2px;
         left: 4px; }
+
+@-webkit-keyframes glow {
+  0% {
+    text-shadow: 0px 0px 1px #ffcd94; }
+  25% {
+    text-shadow: 0px 0px 6px #ffcd94; }
+  50% {
+    text-shadow: 0px 0px 1px #ffcd94; }
+  75% {
+    text-shadow: 0px 0px 6px #ffcd94; }
+  100% {
+    text-shadow: 0px 0px 1px #ffcd94; } }
 
 @keyframes glow {
   0% {
@@ -172,7 +237,9 @@ body {
     width: 100%;
     padding: 40px 0px !important;
     margin: 0 auto;
-    justify-content: none; }
+    -webkit-box-pack: none;
+        -ms-flex-pack: none;
+            justify-content: none; }
 
   .wrapper {
     margin-top: 0px !important; } }
@@ -186,6 +253,7 @@ body {
       width: 100%;
       max-width: 100%;
       height: 100vh;
-      box-shadow: none; } }
+      -webkit-box-shadow: none;
+              box-shadow: none; } }
 
 /*# sourceMappingURL=style.css.map */
