--- a/style.css
+++ b/style.css
@@ -187,5 +187,22 @@ body {
       max-width: 100%;
       height: 100vh;
       box-shadow: none; } }
+@media (hover: none) and (pointer: coarse) {
+  @keyframes glow-winner {
+    0% {
+      box-shadow: none;
+      text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); }
+    25% {
+      box-shadow: none;
+      text-shadow: 0px 0px 5px rgba(212, 255, 255, 0.3); }
+    50% {
+      box-shadow: none;
+      text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); }
+    75% {
+      box-shadow: none;
+      text-shadow: 0px 0px 5px rgba(212, 255, 255, 0.3); }
+    100% {
+      box-shadow: none;
+      text-shadow: 0px 0px 1px rgba(212, 255, 255, 0.3); } } }
 
 /*# sourceMappingURL=style.css.map */
