--- a/style.scss
+++ b/style.scss
@@ -280,6 +280,37 @@ body{
     }
 }
 
+@media (hover: none) and (pointer: coarse){
+    @keyframes glow-winner{
+        0%{
+            box-shadow:none;
+            text-shadow:0px 0px 1px $winner;
+        }
+        25%{
+            box-shadow:none;
+            text-shadow:0px 0px 5px $winner;
+        }
+        50%{
+            box-shadow:none;
+            text-shadow:0px 0px 1px $winner;
+    
+        }
+        75%{
+            box-shadow:none;
+            text-shadow:0px 0px 5px $winner;
+    
+        }
+        100%{
+            box-shadow:none;
+            text-shadow:0px 0px 1px $winner;
+    
+    
+        }
+    
+    }
+
+}
+
 
 
 
